# wbunpacker

./: .gitignore  Cargo.toml  LICENSE
config/: config.example.toml  render.toml
crates/asset/: Cargo.toml
crates/asset/src/: lib.rs
crates/audio/: Cargo.toml
crates/audio/src/: card_voices.rs  lib.rs  wwise.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  diff_output.rs  main.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: diff.rs  lib.rs
crates/manifest/tests/: real_manifest.rs
crates/master-data/: Cargo.toml
crates/master-data/src/: lib.rs
crates/metadb/: Cargo.toml
crates/metadb/src/: lib.rs
crates/texture/: Cargo.toml
crates/texture/src/: home_illust.rs  lib.rs
crates/version/: Cargo.toml
crates/version/src/: lib.rs
tools/: hook_key.py
