[package]
name = "asset"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["io-util", "fs"] }
base64 = "0.22"
anyhow = "1"
tracing = "0.1"
manifest = { path = "../manifest" }
