[package]
name = "manifest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rmpv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lz4_flex = "0.11"
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
hex = "0.4"
tokio = { version = "1", features = ["full"] }