[package]
name = "texture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
manifest = { path = "../manifest" }
tempfile = "3"
walkdir = "2"
sha2 = "0.10"
indicatif = "0.17"
