[package]
name = "texture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
manifest = { path = "../manifest" }
audio = { path = "../audio" }
tempfile = "3"
walkdir = "2"
sha2 = "0.10"
indicatif = "0.17"
