[package]
name = "version"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rmpv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
tracing = "0.1"
md-5 = "0.10"
